// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewDiscrepanciesSubtitle should match snapshot when status=DiscrepanciesAcceptedByIssuingBank 1`] = `
<p>
  The Issuing bank, 
  <b>
    a28b8dc3-8de9-4559-8ca1-272ccef52b47
  </b>
   has accepted discrepancies in documents relating to 
  2018-BP-16
   advised by the Nominated bank
   
  <b>
    a28b8dc3-8de9-4559-8ca1-272ccef52b48
    }
  </b>
</p>
`;

exports[`ReviewDiscrepanciesSubtitle should match snapshot when status=DiscrepanciesAdvisedByIssuingBank 1`] = `
<p>
  The Issuing bank, 
  <b>
    a28b8dc3-8de9-4559-8ca1-272ccef52b47
  </b>
   has advised discrepancies in documents relating to 
  2018-BP-16
</p>
`;

exports[`ReviewDiscrepanciesSubtitle should match snapshot when status=DiscrepanciesAdvisedByNominatedBank 1`] = `
<p>
  The Nominated bank, 
  <b>
    a28b8dc3-8de9-4559-8ca1-272ccef52b48
  </b>
   has advised discrepancies in documents relating to 
  2018-BP-16
</p>
`;
